package cn.firecode.explore.designpattern.adapter;

/**
 * @Project explore_java_base
 * @Author flynn
 * @Date 2021/11/2
 */
public interface MediaPlayer {
    /**
     * 播放媒体
     */
    void playMedia();
}
