package cn.firecode.explore.designpattern.adapter;

/**
 * @Project explore_java_base
 * @Author flynn
 * @Date 2021/11/2
 */
public class Mp3Player {

    public void play(){
        System.out.println("播放MP3文件");
    }
}
